fix events card overflowing

--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -149,12 +149,15 @@ h2 {
   }
   .attendance-card {
     flex-direction:column;
-    width: 100%;
+    width: 90%;
   }
   h3 {
     text-align: left;
     color: var(--solid-secondary);
     margin-right: 3rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .event-attendance-container {
     display: flex;
@@ -197,6 +200,9 @@ h2 {
 .event-card {
   transition: background-color 0.2s;
   text-align: left;
+  border-top: 1px solid var(--background-main-dark);
+  border-bottom: 1px solid var(--background-main-dark);
+  padding: 0.25rem 0rem;
 }
 
 .event-title,
